hphp/test/zend/good/Zend/tests/inter_01.php.expectf

Fatal error: Cannot override previously defined constant foo::foo in foobar in %s/inter_01.php on line 7
